--- a/view/assignment5.html
+++ b/view/assignment5.html
@@ -7,14 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>English Class</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="icon-header.svg" alt="Age" height="50" width="50">
+            <img src="../images/icon-header.svg" alt="Age" height="50" width="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,11 @@
                   Sections
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                    <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
-                    <li><a class="dropdown-item" href="#">Introduction</a></li>
-                    <li><a class="dropdown-item" href="family.html">Family description</a></li>
-                    <li><a class="dropdown-item" href="videoreview.html">Video review</a></li>
+                    <li><a class="dropdown-item" href="../view/vocabulary.html">Vocabulary Class 1</a></li>
+                    <li><a class="dropdown-item" href="../view/index.html">Introduction</a></li>
+                    <li><a class="dropdown-item" href="../view/family.html">Family description</a></li>
+                    <li><a class="dropdown-item" href="../view/videoreview.html">Video review</a></li>
+                    <li><a class="dropdown-item" href="#">Assignment 5</a></li>
                 </ul>
               </li>
             </ul>
@@ -42,18 +43,41 @@
                 <p class="fs-1">My English Class Ailed Vivanco</p>
             </div>
             <br />
-            <footer class="blockquote-footer">Introduction about me <cite title="Source Title"> [ 7 Dic 2020 ]</cite></footer>
-            <div class="assignment-2">
-                <img class="img-profile" src="circle-img.png"  alt="Profile" height="200" width="200">
-                <p class="text-break text-profile">
-                    My name is Ailed, I am 21 years old, I currently live in Mexico City.
-                    I studied Computer Systems Engineering, and I'm a frontend web developer with ReactJs, 
-                    I really like listening to music and I want to buy an acoustic guitar.
+            <footer class="blockquote-footer">Assignment 5 <cite title="Source Title"> [ 17 Dic 2020 ]</cite></footer>
+            <div>
+                <p class="h3">1- Answer these questions, then record them and upload them.</p>
+                <p class="h5">What type of company is your company? What type of companies do you work with?</p>
+                <p class="text-break">
+                    I do not work at the moment, but I will start working on January 4, and it is a company 
+                    that is dedicated to providing education services
                 </p>
+
+                <p class="h3">2. Write sentences about five companies that you know or like, 
+                    explaining in the sentences if they provide services or produce products. Record them and upload them.
+                </p>
+                <p class="text-break">
+                    Walmar produces products about stationery, food and more
+                </p>
+                <p class="text-break">
+                    Coca-Cola provides beverage services
+                </p>
+                <p class="text-break">
+                    Facebook provides social media service
+                </p>
+                <p class="text-break">
+                    Total Play provides Internet services
+                </p>
+                <p class="text-break">
+                    Federal Electricity Commission produces electricity services
+                </p>
+
+                <p class="h3">3. Answer these questions on audio and upload it.</p>
+                <p class="h5">Last year and next year</p>
+                <p class="h5">A colleague’s telephone number</p>
+                <p class="h5">Number of business areas and types of product or services at your company</p>
             </div>
           </div>
     </section>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
