--- a/view/index.html
+++ b/view/index.html
@@ -7,14 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>English Class</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="icon-header.svg" alt="Age" height="50" width="50">
+            <img src="../images/icon-header.svg" alt="Age" height="50" width="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,11 @@
                   Sections
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                    <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
-                    <li><a class="dropdown-item" href="index.html">Introduction</a></li>
-                    <li><a class="dropdown-item" href="#">Family description</a></li>
-                    <li><a class="dropdown-item" href="videoreview.html">Video review</a></li>
+                    <li><a class="dropdown-item" href="../view/vocabulary.html">Vocabulary Class 1</a></li>
+                    <li><a class="dropdown-item" href="#">Introduction</a></li>
+                    <li><a class="dropdown-item" href="../view/family.html">Family description</a></li>
+                    <li><a class="dropdown-item" href="../view/videoreview.html">Video review</a></li>
+                    <li><a class="dropdown-item" href="../view/assignment5.html">Assignment 5</a></li>
                 </ul>
               </li>
             </ul>
@@ -42,20 +43,13 @@
                 <p class="fs-1">My English Class Ailed Vivanco</p>
             </div>
             <br />
-            <footer class="blockquote-footer">Description about my family <cite title="Source Title"> [ 7 Dic 2020 ]</cite></footer>
+            <footer class="blockquote-footer">Introduction about me <cite title="Source Title"> [ 7 Dic 2020 ]</cite></footer>
             <div class="assignment-2">
-                <img class="img-profile" src="family.png"  alt="Profile" height="250" width="420"><br />
-                <audio src="Recording_12.mp3" preload="auto" controls></audio>
+                <img class="img-profile" src="../images/circle-img.png"  alt="Profile" height="200" width="200">
                 <p class="text-break text-profile">
-                    My family is big but this time I'm going to talk about my mom and my brother.
-
-                    My mother is an accountant, she is 52 and currently works independently.
-                    My brother is a Systems Engineer, he is 26 and currently he is a Technical Leader IT in Buggy TLC.
-                </p>
-                <audio src="Recording_10.mp3" preload="auto" controls></audio>
-                <p class="text-break text-profile">
-                    I will talk about my brother, he's 26, he was born Mexico City, he likes his work a lot, he likes research and contribute.
-                    He's in charge of all data, security and cloud computing of tecnology, also develop backend and frontend the bussines model and web desing.
+                    My name is Ailed, I am 21 years old, I currently live in Mexico City.
+                    I studied Computer Systems Engineering, and I'm a frontend web developer with ReactJs, 
+                    I really like listening to music and I want to buy an acoustic guitar.
                 </p>
             </div>
           </div>
