--- a/view/vocabulary.html
+++ b/view/vocabulary.html
@@ -7,14 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>English Class</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="icon-header.svg" alt="Age" height="50" width="50">
+            <img src="../images/icon-header.svg" alt="Age" height="50" width="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,11 @@
                   Sections
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                    <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
-                    <li><a class="dropdown-item" href="#">Introduction</a></li>
-                    <li><a class="dropdown-item" href="family.html">Family description</a></li>
-                    <li><a class="dropdown-item" href="videoreview.html">Video review</a></li>
+                    <li><a class="dropdown-item" href="#">Vocabulary Class 1</a></li>
+                    <li><a class="dropdown-item" href="../view/index.html">Introduction</a></li>
+                    <li><a class="dropdown-item" href="../view/family.html">Family description</a></li>
+                    <li><a class="dropdown-item" href="../view/videoreview.html">Video review</a></li>
+                    <li><a class="dropdown-item" href="../view/assignment5.html">Assignment 5</a></li>
                 </ul>
               </li>
             </ul>
@@ -42,25 +43,37 @@
                 <p class="fs-1">My English Class Ailed Vivanco</p>
             </div>
             <br />
-            <footer class="blockquote-footer">Video Review <cite title="Source Title"> [ 7 Dic 2020 ]</cite></footer>
-            <div class="assignment-2">
-                <img class="img-profile" src="chat.svg"  alt="Profile" height="200" width="200">
-                <p class="text-break text-profile">
-                  The percentage of native English speakers is very low.
-                </p>
-                <p class="text-break text-profile">           
-                  Being native can be an advantage of better pronunciation
-                </p>
-                <p class="text-break text-profile">              
-                  Have confidence in yourself to speak
-                </p>
-                <p class="text-break text-profile">
-                  Accept being wrong
-                </p>
-                <p class="text-break text-profile">
-                  Knowing the subject is important
-                </p>
-            </div>
+            <footer class="blockquote-footer">Vocabulary Class 1 <cite title="Source Title"> [ 7 Dic 2020 ]</cite></footer>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Age</th>
+                    <th scope="col">Male</th>
+                    <th scope="col">Female</th>
+                    <th scope="col">Meet</th>
+                    <th scope="col">Spell</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">
+                        <img src="../images/age-limit.svg" alt="Age" height="80" width="80">
+                    </th>
+                    <td>
+                        <img src="../images/male.svg" alt="Male" height="80" width="80">
+                    </td>
+                    <td>
+                        <img src="../images/female.svg" alt="Female" height="80" width="80">
+                    </td>
+                    <td>
+                        <img src="../images/conversation.svg" alt="Meet" height="80" width="80">
+                    </td>
+                    <td>
+                        <img src="../images/spell-check.svg" alt="Spell" height="80" width="80">
+                    </td>
+                  </tr>
+                </tbody>
+            </table>
           </div>
     </section>
 
